<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/view_base_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_16dp"
        android:paddingRight="@dimen/padding_16dp">

        <com.jumook.syouhui.widget.TintEditText
            android:id="@+id/login_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_login_phone"
            android:drawablePadding="@dimen/padding_10dp"
            android:gravity="center_vertical"
            android:hint="@string/login_mobile_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingBottom="@dimen/padding_10dp"
            android:paddingTop="@dimen/padding_10dp"
            android:textColor="@color/tf_black_6d"
            android:textColorHint="@color/hint_tip_grey"
            android:textSize="14sp" />

        <View
            android:id="@+id/login_mobile_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/under_grey_line" />

        <com.jumook.syouhui.widget.TintEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_login_password"
            android:drawablePadding="@dimen/padding_10dp"
            android:gravity="center_vertical"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/padding_10dp"
            android:paddingTop="@dimen/padding_10dp"
            android:textColor="@color/tf_black_6d"
            android:textColorHint="@color/hint_tip_grey"
            android:textSize="14sp" />

        <View
            android:id="@+id/login_password_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/under_grey_line" />

    </LinearLayout>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginLeft="@dimen/padding_16dp"
        android:layout_marginRight="@dimen/padding_16dp"
        android:layout_marginTop="@dimen/padding_10dp"
        android:background="@drawable/btn_rad_theme_selector"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_16dp"
        android:paddingRight="@dimen/padding_16dp">

        <TextView
            android:id="@+id/login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_10dp"
            android:paddingTop="@dimen/padding_10dp"
            android:text="@string/login_forget"
            android:textColor="@color/tf_black_6d"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="@dimen/padding_10dp"
            android:paddingTop="@dimen/padding_10dp"
            android:text="@string/register"
            android:textColor="@color/tf_black_6d"
            android:textSize="12sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/tf_black_9d" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:gravity="center"
            android:text="@string/login_fast"
            android:textColor="@color/tf_black_6d"
            android:textSize="12sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/tf_black_9d" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_40dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin_50dp"
        android:paddingRight="@dimen/margin_50dp">

        <TextView
            android:id="@+id/login_we_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/padding_10dp"
            android:drawableTop="@drawable/ic_login_wechat"
            android:gravity="center"
            android:text="@string/login_wechat"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawablePadding="@dimen/padding_10dp"
            android:drawableTop="@drawable/ic_login_qq"
            android:gravity="center"
            android:text="@string/login_qq"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>