<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/view_base_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_16dp"
        android:paddingRight="@dimen/padding_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10dp"
            android:text="@string/login_mobile_prefix"
            android:textColor="@color/tf_black_6d" />

        <View
            android:layout_width="1px"
            android:layout_height="25dp"
            android:background="@color/tf_black_9d" />

        <EditText
            android:id="@+id/item_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_mobile_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="@dimen/padding_10dp"
            android:textColor="@color/tf_black_6d"
            android:textColorHint="@color/hint_tip_grey"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_3dp"
        android:background="@color/under_grey_line" />

    <Button
        android:id="@+id/item_next"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@drawable/btn_rad_theme_selector"
        android:enabled="false"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="14sp" />


    <com.jumook.syouhui.widget.BrightTextView
        android:id="@+id/item_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_10dp"
        android:drawableLeft="@drawable/ic_check_circle_true"
        android:drawablePadding="@dimen/padding_5dp"
        android:paddingBottom="@dimen/padding_7dp"
        android:paddingTop="@dimen/padding_7dp"
        android:text="@string/login_agreement"
        android:textColor="@color/tf_black_6d" />

</LinearLayout>