<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="请选择地区"
        android:textColor="@color/tf_black_3d"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_7dp"
        android:paddingLeft="@dimen/padding_16dp"
        android:paddingRight="@dimen/padding_16dp"
        android:paddingTop="@dimen/padding_7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_province"
            android:textColor="@color/tf_black_6d" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/area_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/province" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_7dp"
        android:paddingLeft="@dimen/padding_16dp"
        android:paddingRight="@dimen/padding_16dp"
        android:paddingTop="@dimen/padding_7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_city"
            android:textColor="@color/tf_black_6d" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/area_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/city" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_3dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/address_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:text="@string/cancel"
            android:textColor="@color/tf_black_3d" />

        <Button
            android:id="@+id/address_confirm"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:text="@string/confirm"
            android:textColor="@color/tf_black_3d" />

    </LinearLayout>

</LinearLayout>